--- a/src/main/resources/static/websocket-test.html
+++ b/src/main/resources/static/websocket-test.html
@@ -299,6 +299,37 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-3">
+            <div>
+                <p class="text-sm text-gray-500">Pâtisserie</p>
+                <p class="font-medium">${commande.patisserieNom} (ID: ${commande.patisserieId})</p>
+            </div>
+            <div>
+                <p class="text-sm text-gray-500">Téléphone Client</p>
+                <p class="font-medium">${commande.telephoneClient}</p>
+            </div>
+        </div>
+
+        <!-- Nouvelle section pour les infos client -->
+        <div class="mb-3 bg-blue-50 p-3 rounded-lg">
+            <h4 class="font-bold text-blue-700 mb-2">Informations Client</h4>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+                <div>
+                    <p class="text-sm text-gray-500">Nom</p>
+                    <p class="font-medium">${commande.client.fullName}</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500">Email</p>
+                    <p class="font-medium">${commande.client.email}</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500">Téléphone</p>
+                    <p class="font-medium">${commande.client.telephone}</p>
+                </div>
+            </div>
+        </div>
+
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-3">
                 <div class="bg-gray-50 p-3 rounded-lg">
                     <p class="text-sm text-gray-500">Montant Total</p>
                     <p class="font-bold text-xl text-blue-700">${commande.montantTotal} €</p>
