--- a/src/main/resources/static/websocket-test.html
+++ b/src/main/resources/static/websocket-test.html
@@ -195,9 +195,11 @@
             updateConnectionStatus(true);
 
             // Nouvel abonnement avec le nouvel ID
+            const topic = `/topic/patisserie/${patisserieId}/nouvelles-commandes`;
             currentSubscription = stompClient.subscribe(
-                `/topic/patisserie/${patisserieId}/nouvelles-commandes`,
+                topic,
                 function(message) {
+                    console.log('[TestPage] Received message on topic:', topic, 'Message:', message.body);
                     const commande = JSON.parse(message.body);
                     addNotification(commande);
                 }
